@@ -4,6 +4,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 4.013 devel
 
+***   Add --trace-fst-thread.
+
 ****  Support '#' comments in $readmem, bug1411. [Frederick Requin]
 
 ****  Support "'dx" constants, bug1423. [Udi Finkelstein]
